[metadata]
name = pwtgbot
version = 1.2.3
author = K4YT3X
author_email = k4yt3x@k4yt3x.com
license = Proprietary
license_files = LICENSE
description = PwnWiki 命令行搜索工具
url = https://github.com/k4yt3x/pwtgbot
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: Other/Proprietary License
    Topic :: Security
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires = loguru; pwsearch; python-telegram-bot
python_requires = >=3.6

[options.entry_points]
console_scripts = pwtgbot = pwtgbot:main
